<resources>

    <string name="app_name">MrNice</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_special_day_notification_guid">SpecialDayNotificationGuidActivity</string>
    <string name="howoldhe">How old is he?</string>
    <string name="howoldshe">How old is she?</string>
    <string name="whose">Whose days you want to remember?</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="next">Next</string>
    <string name="type">Select Type</string>
    <string name="another">Add another day</string>
    <string name="done">Done</string>
    <string name="title_activity_people_setting">PeopleSettingActivity</string>
    <string name="title_activity_ps">PSActivity</string>
    <string name="title_activity_special_day_setting">SpecialDaySetting</string>

    <string-array name="planets_array">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Others</item>
    </string-array>

    <string name="title_activity_people_list">PeopleList</string>
    <string name="title_activity_special_day_list">SpecialDayList</string>
    <string name="addpeople">Add New One</string>
    <string name="peopletitle">Please select one man to add day !</string>
    <string name="maintitle">select one item for start!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>