<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/next" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/whose" />

    <TextView
        android:id="@+id/firstnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="Firstname" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstnametext"
        android:inputType="text"
        android:layout_below="@+id/firstnametext"
        android:ems="10" />

    <TextView
        android:id="@+id/lastnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstname"
        android:layout_below="@+id/firstname"
        android:text="Lasttname" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastnametext"
        android:layout_below="@+id/lastnametext"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastname"
        android:layout_centerVertical="true"
        android:text="@string/howoldhe" />

    <CheckBox
        android:id="@+id/malecheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView01"
        android:layout_below="@+id/lastname"
        android:layout_marginTop="17dp"
        android:checked="true"
        android:text="@string/male" />

    <CheckBox
        android:id="@+id/femalecheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/malecheck"
        android:layout_alignBottom="@+id/malecheck"
        android:layout_alignRight="@+id/lastname"
        android:text="@string/female" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/TextView01"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

</RelativeLayout>