<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/typespinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="69dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/typespinner"
        android:layout_alignBottom="@+id/typespinner"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:text="@string/type" />

    <CheckBox
        android:id="@+id/peryearcheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:text="Annually" />

    <CheckBox
        android:id="@+id/oncecheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/typespinner"
        android:layout_alignTop="@+id/peryearcheckbox"
        android:text="Only Once" />

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/done" />

    <Button
        android:id="@+id/another"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/done"
        android:layout_alignParentLeft="true"
        android:text="@string/another" />

    <Button
        android:id="@+id/datesettingbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/peryearcheckbox"
        android:layout_below="@+id/peryearcheckbox"
        android:layout_marginTop="26dp"
        android:text="Date setting" />

</RelativeLayout>